--- a/data/medtasks.json
+++ b/data/medtasks.json
@@ -1899,6 +1899,369 @@
         "answer5":"kortyzol",
         "correct": 1,
         "info":"Betametazon stosowany jest  w dawce 12 mg i.m. co 24 h przez 2 dni."
-
-    } 
+    },
+    {
+        "id":"Pediatria",
+        "id16":"Reumatologia",
+        "no":1,
+        "task":"Najczęstszą chorobą reumatologiczną wieku dziecięcego jest:",
+        "answer1":"Młodzieńcze idiopatyczne zapalenie stawów",
+        "answer2":"Toczeń rumieniowaty układowy",
+        "answer3":"Młodzieńcze zapalenie skórno-mięśniowe",
+        "answer4":"Twardzina",
+        "answer5":"Mieszana choroba tkanki łącznej",
+        "correct": 0,
+        "info":"Wspólnymi cechami wszystkich rodzajów MIZS są: zapalenia stawów, zaniki mięśni, sztywność poranna, guzki podskórne, zapalenie błony naczyniowej oka."
+    },
+    {
+        "id":"Pediatria",
+        "id16":"Reumatologia",
+        "no":2,
+        "task":"Do kryteriów rozpoznania MIZS należą:",
+        "answer1":"",
+        "answer2":"",
+        "answer3":"wiek zachorowania poniżej 16 lat, czas trwania objawów - minimum 6 tygodni, wykluczenie innej przyczyny zapaleń stawów",
+        "answer4":"",
+        "answer5":"",
+        "correct": 2,
+        "info":"MIZS wyróżniamy postacie: Systemowe, Nielicznostawowe, Wielostawowe seronegatywne, Wielostawowe seropozytywne, Zapalenie stawów z zapaleniem przyczepów ściegnistych, Łuszczycowe zapalenie stawów, Niezróżnicowane zapalenie stawów."
+    },
+    {
+        "id":"Pediatria",
+        "id16":"Reumatologia",
+        "no":3,
+        "task":"3. Do kryteriów systemowego MIZD należą:",
+        "answer1":"gorączka przed okres co najmniej 2 tygodni",
+        "answer2":"zapalenie 1 lub wiecej stawów",
+        "answer3":"przelotne wysypki, hepato/splenomegalia, limfadenopatia, zapalenie błon surowiczych",
+        "answer4":"a+b",
+        "answer5":"a+b+c",
+        "correct": 4,
+        "info":"Wystraczy jeden objaw wymieniony w punkcie 3."
+    },
+    {
+        "id":"Pediatria",
+        "id16":"Reumatologia",
+        "no":4,
+        "task":"4. Metoda śluzowa polega na ocenie śluzu wydzielanego w okresie owulacji, który jest:",
+        "answer1":"",
+        "answer2":"",
+        "answer3":"obfity, przezroczysty, śliski, ciągliwy",
+        "answer4":"",
+        "answer5":"",
+        "correct": 2,
+        "info":""
+    },
+    {
+        "id":"Pediatria",
+        "id2":"Reumatologia",
+        "no":5,
+        "task":"5. Najcięższą kliniczne postacią MIZS jest postać:",
+        "answer1":"nielicznostawowa",
+        "answer2":"wielostawowa seropozytywna",
+        "answer3":"zapalenie stawów z zapaleniem przyczepów ścięgnistych",
+        "answer4":"systemowa",
+        "answer5":"łuszczycowe zapalenie stawów",
+        "correct": 4,
+        "info":""
+    },
+    {
+        "id":"Pediatria",
+        "id2":"Reumatologia",
+        "no":6,
+        "task":"6. Najczęstszum rodzajem młodzieńczego idiopatycznego zapalenia stawów jest postać:",
+        "answer1":"",
+        "answer2":"",
+        "answer3":"nielicznostawowa",
+        "answer4":"",
+        "answer5":"",
+        "correct": 2,
+        "info":""
+    },
+    {
+        "id":"Pediatria",
+        "id16":"Reumatologia",
+        "no":7,
+        "task":"7. W przebiegu Młodzieńczego idiopatycznego zapalenia stawów najczęściej zajęte są stawy:",
+        "answer1":"",
+        "answer2":"kolanowe",
+        "answer3":"",
+        "answer4":"",
+        "answer5":"",
+        "correct": 1,
+        "info":""
+    },
+    {
+        "id":"Pediatria",
+        "id16":"Reumatologia",
+        "no":8,
+        "task":"8. Do czynników złego rokowania nie należy:",
+        "answer1":"obniżone OB",
+        "answer2":"symetryczne i aktywne zapalenie stawów",
+        "answer3":"HLA-B27",
+        "answer4":"płeć żeńska",
+        "answer5":"początek choroby we wczesnym dzieciństwie",
+        "correct": 0,
+        "info":"Wskaźnik CHAQ > 0,75 jest również czynnikiem złego rokowania."
+    },
+    {
+        "id":"Pediatria",
+        "id2":"Reumatologia",
+        "no":9,
+        "task":"9. Do leków stosowanych w MIZS należą:",
+        "answer1":"Leki modyfikujące przebieg choroby",
+        "answer2":"Niesteroidowe leki przeciwzapalne",
+        "answer3":"GKS",
+        "answer4":"Leki biologiczne",
+        "answer5":"wszystkie wymienione",
+        "correct": 4,
+        "info":""
+    },
+    {
+        "id":"Pediatria",
+        "id2":"Reumatologia",
+        "no":10,
+        "task":"10. Do chorób, które należy róznicować z MIZS należą:",
+        "answer1":"zakażenia stawów",
+        "answer2":"reaktywne zapalenie stawów",
+        "answer3":"alergiczne i toksyczne zapalenie stawów",
+        "answer4":"artropatie w chorobach nowotworowych",
+        "answer5":"wszystkie wymienione",
+        "correct": 4,
+        "info":""
+    },
+    {
+        "id":"ginekologia",
+        "id2":"nieplodosc",
+        "no":1,
+        "task":"1. O niedpłodności mówimy gdy:",
+        "answer1":"",
+        "answer2":"kobieta nie zachodzi w ciążę po roku współżycia z częstotliwością 3-4 razy na dobę przy braku stosowania jakichkolwiek środków antykoncepcji",
+        "answer3":"",
+        "answer4":"",
+        "answer5":"",
+        "correct": 1,
+        "info":""
+    },
+    {
+        "id":"ginekologia",
+        "id16":"nieplodnosc",
+        "no":2,
+        "task":"2. Nidacja to:",
+        "answer1":"",
+        "answer2":"",
+        "answer3":"",
+        "answer4":"zagnieżdżenie zarodka w macicy",
+        "answer5":"",
+        "correct": 3,
+        "info":""
+    },
+    {
+        "id":"ginekologia",
+        "id2":"nieplodnosc",
+        "no":3,
+        "task":"3. Mechanizm antykoncepcji kształtek mechanicznych polega na:",
+        "answer1":"reakcji zapalnej na ciało obce oraz uwalnianiu jonów miedzi, które działają upośledzająco na plemniki",
+        "answer2":"",
+        "answer3":"",
+        "answer4":"",
+        "answer5":"",
+        "correct": 0,
+        "info":"Do pozostałych metod mechanicznych antykoncepcji należą: błona dopochwowa, kapturek naszyjkowy, substancje plemnikobójcze, prezerwatywa, steryzlizacja chirurgiczna."
+    },
+    {
+        "id":"ginekologia",
+        "id2":"nieplodnosc",
+        "no":4,
+        "task":"4.Według WHO w 1 ml nasienia powinno znajdować się:",
+        "answer1":"",
+        "answer2":"powyżej 20 milionów plemników",
+        "answer3":"",
+        "answer4":"",
+        "answer5":"",
+        "correct": 1,
+        "info":""
+    },
+    {
+        "id":"ginekologia",
+        "id2":"nieplodnosc",
+        "no":5,
+        "task":"5. Bo metod diagnostyki niepłodności nie należy:",
+        "answer1":"badanie nasienia",
+        "answer2":"histerosapingografia",
+        "answer3":"pomiar podstawowej ciepłoty ciała",
+        "answer4":"histerektomia",
+        "answer5":"laparoskopia",
+        "correct": 3,
+        "info":""
+    },
+    {
+        "id":"ginekologia",
+        "id2":"nieplodnosc",
+        "no":6,
+        "task":"6. W leczeniu farmakologicznym niepłodności stosuje się:",
+        "answer1":"antyestrogeny",
+        "answer2":"gonadotropiny",
+        "answer3":"analogi gonadoliberyny",
+        "answer4":"hormony steroidowe",
+        "answer5":"wszystkie wymienione",
+        "correct": 4,
+        "info":""
+    },
+    {
+        "id":"ginekologia",
+        "id2":"nieplodnosc",
+        "no":7,
+        "task":"7. Technika chrirugicznego wspomagania rozrodu IVF ET polega na:",
+        "answer1":"inseminacje domaciczne",
+        "answer2":"zapłodnieniu in vitro i przeniesieniu zarodka do macicy",
+        "answer3":"docytoplazmatyczne wstrzykiwanie plemników",
+        "answer4":"pobieranie plemników z najądrzy lub z jąder",
+        "answer5":"brak prawidłowej odpowiedzi",
+        "correct": 1,
+        "info":""
+    },
+    {
+        "id":"ginekologia",
+        "id2":"nieplodnosc",
+        "no":8,
+        "task":"8. Zaburzenia fazy lutealnej polegają na ",
+        "answer1":"skróceniu czasu jej trwania i zmniejszonego stężenia progesteronu",
+        "answer2":"wydłużeniu czasu jej trwania i zmniejszonego steżenia progesteronu",
+        "answer3":"skróceniu czasu jej trwania i zwiększonego stężenia progesteronu",
+        "answer4":"wydłużeniu czasu jej trwania i zwiększonego stężenia progesteron",
+        "answer5":"wszsytkie odpowiedzi są prawidłowe",
+        "correct": 0,
+        "info":""
+    },
+    {
+        "id":"ginekologia",
+        "id2":"nieplodnosc",
+        "no":9,
+        "task":"9. Oligoowulacja polega na:",
+        "answer1":"",
+        "answer2":"",
+        "answer3":"zmniejszonym stężeniu estradiolu w pierwszej fazie cyklu miesiączkowego",
+        "answer4":"",
+        "answer5":"",
+        "correct": 2,
+        "info":""
+    },
+    {
+        "id":"ginekologia",
+        "id2":"nieplodnosc",
+        "no":10,
+        "task":"10. Do przyczyn anowulacji, czyli braku jajeczkowania należą:",
+        "answer1":"niewydolność układu podwzgórzowo-przysadkowego",
+        "answer2":"niewydolność układu podwzgórzowo-przysadkowego z hiperprolaktynemią i mlekotokiem",
+        "answer3":"dysfunkcja układu podwzgórzowo-przysadkowego, w tym zespół policystycznych jajników",
+        "answer4":"1+2",
+        "answer5":"1+2+3",
+        "correct": 4,
+        "info":""
+},
+{
+    "id":"ginekologia",
+    "id2":"nieplodosc",
+    "no":11,
+    "task":"11. Do kryteriów rozpoznania niewydolności podwzgórzowo-przysadkowej nie należy:",
+    "answer1":"brak miesiączki",
+    "answer2":"prawidłowej stężenie prolaktyny",
+    "answer3":"ujemny wynik testu progestoronowego",
+    "answer4":"dodatni wynik testu estrogenowo-progesteronowego",
+    "answer5":"wysokie stężenie FSH",
+    "correct":4,
+    "info":""
+},
+{
+    "id":"ginekologia",
+    "id16":"nieplodnosc",
+    "no":12,
+    "task":"Wskaż fałszywe zdanie dotyczące nasienia męskiego:",
+    "answer1":"jego objętość powinna być większa niż 2 ml",
+    "answer2":"liczba plemników powinna przekraczać 20 mln w 1 ml",
+    "answer3":"ponad 60% plemników powinno wykazywać ruch progresywny",
+    "answer4":"10% powinno wykazywać ruch progresywny szybki",
+    "answer5":"plemniki patologiczne nie mogą przekraczać 70% nasienia",
+    "correct": 4,
+    "info":"Ruch progresywny szybki powinno spełniać 25% i więcej plemników."
+},
+{
+    "id":"ginekologia",
+    "id2":"nieplodnosc",
+    "no":13,
+    "task":"13. Oligozoospermia oznacza, że:",
+    "answer1":"",
+    "answer2":"ilość plemników w 1 ml nasienia jest niższa niż 20 mln",
+    "answer3":"",
+    "answer4":"",
+    "answer5":"",
+    "correct": 1,
+    "info":""
+},
+{
+    "id":"ginekologia",
+    "id2":"nieplodnosc",
+    "no":14,
+    "task":"14. Astenozoospermia oznacza, że:",
+    "answer1":"",
+    "answer2":"powyżej 20 milionów plemników",
+    "answer3":"",
+    "answer4":"mniej niż 50% plemników wykazuje ruch postępowy, zarówno szybki jak i wolny lub mniej niż 25% plemników wykazuje ruch szybki, postępujący",
+    "answer5":"",
+    "correct": 3,
+    "info":""
+},
+{
+    "id":"ginekologia",
+    "id2":"nieplodnosc",
+    "no":15,
+    "task":"15. Teratozoospermia oznacza, że:",
+    "answer1":"",
+    "answer2":"",
+    "answer3":"",
+    "answer4":"",
+    "answer5":"stwierdza się mniej niż 30% plemników o prawidłowej morfologii",
+    "correct": 4,
+    "info":""
+},
+{
+    "id":"ginekologia",
+    "id2":"nieplodnosc",
+    "no":16,
+    "task":"16. Oligoastenoteratozoospermia dotyczy cech plemników takich jak:",
+    "answer1":" koncentracja, morfologia, ruchliwość",
+    "answer2":"",
+    "answer3":"",
+    "answer4":"",
+    "answer5":"",
+    "correct": 0,
+    "info":""
+},
+{
+    "id":"ginekologia",
+    "id2":"nieplodnosc",
+    "no":17,
+    "task":"17. Technika chrirugicznego wspomagania rozrodu IVF ET polega na:",
+    "answer1":"inseminacje domaciczne",
+    "answer2":"zapłodnieniu in vitro i przeniesieniu zarodka do macicy",
+    "answer3":"docytoplazmatyczne wstrzykiwanie plemników",
+    "answer4":"pobieranie plemników z najądrzy lub z jąder",
+    "answer5":"brak prawidłowej odpowiedzi",
+    "correct": 1,
+    "info":"Azoospermia oznacza- brak plemników w ejakulacie. Aspermia oznacza brak spermy."
+},
+{
+    "id":"ginekologia",
+    "id2":"nieplodnosc",
+    "no":18,
+    "task":"18. Niemożność donoszenia ciąży to wydalenie jaja płodowego:",
+    "answer1":"do 22 tygodnia ciąży",
+    "answer2":"do 23 tygodnia ciąży",
+    "answer3":"do 24 tygodnia ciąży",
+    "answer4":"do 25 tygodnia ciąży",
+    "answer5":"do 26 tygodnia ciąży",
+    "correct": 0,
+    "info":""
+} 
 ]
